kustomize/yaml/stripPrefix.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: steven
spec:
  stripPrefix:
    prefixes:
      - /steven
