kustomize/yaml/stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: code-server-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /vscode
